@@ -997,3 +997,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20150316 zlib.c,zxs.c: define ZLIB_CONST when including <zlib.h> and remove cast
          used as workaround for discarding of const (Stuart).
 20150316 pzx_read.c: add missing const qualifiers and remove casts (Stuart).
+20150316 generate.pl.in,libspectrum.h.in: remove autogeneration warning from
+         libspectrum.h.in (Stuart).
